--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -743,6 +743,7 @@ section.lazy-placeholder:after {
 .cid-rQGuCpkEyf .mbr-text,
 .cid-rQGuCpkEyf .mbr-section-btn {
   color: #232323;
+  text-align: left;
 }
 .cid-rQGAVIXTHh {
   padding-top: 90px;
