--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -862,7 +862,7 @@ section.lazy-placeholder:after {
   position: relative;
   color: #232323;
   cursor: pointer;
-  border-color: #073b4c;
+  border-color: #d3d3d3;
 }
 .cid-rQQKy1L5Fx .btn-social i {
   top: 0;
@@ -871,10 +871,10 @@ section.lazy-placeholder:after {
 }
 .cid-rQQKy1L5Fx .btn-social:hover {
   color: #fff;
-  background: #073b4c;
+  background: #d3d3d3;
 }
 .cid-rQQKy1L5Fx .btn-social:hover i.socicon {
-  color: #ffffff !important;
+  color: #000000 !important;
 }
 .cid-rQQKy1L5Fx .btn-social + .btn {
   margin-left: .1rem;
