--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -844,7 +844,7 @@ section.lazy-placeholder:after {
 }
 .cid-rQQKy1L5Fx {
   padding-top: 90px;
-  padding-bottom: 90px;
+  padding-bottom: 0px;
   background-color: #ffffff;
 }
 .cid-rQQKy1L5Fx [class^="socicon-"]:before,
@@ -884,11 +884,34 @@ section.lazy-placeholder:after {
     font-size: 20px !important;
   }
 }
-.cid-rRRYAyl7q3 {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-color: #efefef;
+.cid-rTb49S2ROa {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #232323;
 }
-.cid-rRRYAyl7q3 P {
-  color: #767676;
+.cid-rTb49S2ROa .testimonial-text {
+  font-style: italic;
+  font-weight: 300;
+}
+.cid-rTb49S2ROa .mbr-author-name {
+  font-weight: bold;
+  color: #232323;
+}
+.cid-rTb49S2ROa .media-container-row {
+  word-wrap: break-word;
+  word-break: break-word;
+}
+@media (max-width: 991px) {
+  .cid-rTb49S2ROa .mbr-figure,
+  .cid-rTb49S2ROa img {
+    max-height: 300px;
+    width: auto;
+    margin: auto;
+  }
+  .cid-rTb49S2ROa .media-content {
+    padding-top: 1.5rem !important;
+  }
+}
+.cid-rTb49S2ROa .mbr-author-desc {
+  color: #232323;
 }
