--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -954,6 +954,7 @@ section.lazy-placeholder:after {
 .cid-rTb7Hkerzh .testimonial-text {
   font-style: italic;
   font-weight: 300;
+  color: #ffffff;
 }
 .cid-rTb7Hkerzh .mbr-author-name {
   font-weight: bold;
